# EIPsInsight

./: .env  .env.example  .eslintrc.json  .gitignore  CONTRIBUTE.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
docs/: NEWCOMER_GUIDE.md  SUBSCRIPTIONS_FLOW.md  pages-audit.md
prisma/: schema.prisma
public/: ads.txt
public/avatars/: .keep
scripts/: generate-page-audit.mjs  generate-qr.js  generate-static-images.js
src/: TableOfContents.tsx  env.ts  global.d.ts  types.ts
src/app/: error.tsx  global.d.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  theme.ts
src/blogs/: after-devnet-2-stabilizes-ethereum-gears-up-for-glamsterdam-devnet-3.md  block-size-limit-eip-7934  block-size-limit-eip-7934.md  blog-1.md  bpo-forks-eip-7892.md  ePBS-EIP-7732.md  eip-decade-overview.md  eip-proposal-builder-validation-legacy.md  eip_decade_overview.md  el-eips-under-spotlight-as-glamsterdam-devnet-2-narrows-upgrade-scope.md  el-eips-under-spotlight.md  ethereum-introduces-acdg-to-bring-structure-to-governance-discussions.md  ethereum-opens-hegota-proposal-window.md  gas-limit-cap-eip-7825.md  gas_limit_cap_eip_7825.md  top-ten-eips-2025.md  (+12 more)
src/other_tools/EIP-Board/: Cargo.toml  README.md  action.yml  queue.html
src/other_tools/EIP-Board/.github/workflows/: test.yaml
src/other_tools/EIP-Board/src/: main.rs
src/other_tools/EIP-Board/templates/: index.html  index.md
tests/: toc.test.ts
(+740 files in other folders)
